quartz-wiki/quartz-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quartz-rst-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: quartz-rst
  template:
    metadata:
      labels:
        app: quartz-rst
    spec:
      containers:
      - image: us.icr.io/rtiffany/quartz-rst:latest
        name: quartz-rst
        ports:
        - containerPort: 8080
