quartz-wiki/quartz-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quartz-rst-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: quartz-rst
