quartz-wiki/quartz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: do-clusterissuer
  name: quartz-ingress
spec:
  rules:
  - host: quartz.ryantiffany.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: quartz-rst-svc
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - quartz.ryantiffany.dev
    secretName: quartz-secret
